partner refer link email update content management feature

--- a/evd/.env
+++ b/evd/.env
@@ -11,5 +11,5 @@ export EVD_OTP_ON="off"
 export EVD_EMAIL_ON = "off"
 export EVD_DB_HOST="localhost"
 export EVD_DB_USER="root"
-export EVD_DB_PWD="Alphar@114"
-export EVD_DB_NAME="jupiter_db"
+export EVD_DB_PWD=""
+export EVD_DB_NAME="servebeta"
